# transformer_latent_diffusion

./: .gitignore  Dockerfile  Dockerfile.fastapi  Dockerfile.gradio  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-api-build.yml  python-tests.yml
tests/: test_api.py  test_diffuser.py
tld/: app.py  configs.py  data.py  denoiser.py  diffusion.py  gradio_app.py  train.py  transformer_blocks.py
